[project]
name = 'pntos'
authors = [
  { name='IS4S', email='about@pntos.com' },
]
description = 'A modular open architecture for navigation systems'
readme = 'README.md'
license = 'Apache-2.0'
license-files = ['LICENSE']
dynamic = ["version"]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.version]
path = "meson.build"
pattern = '''[^a-z_]version\s*:\s*(?P<quote>['"])(?P<version>[^'"]+)(?P=quote)'''

[tool.hatch.build.targets.sdist]
only-include = ['api']

[tool.hatch.build.targets.wheel]
packages = ['api']

# Install to "pntos/" prefix, rather than having "api/" be the top-level
# directory in the site packages
[tool.hatch.build.targets.wheel.sources]
"" = "pntos"
